Added padding to See More button.

--- a/index.html
+++ b/index.html
@@ -339,11 +339,9 @@
                     <div class="col-sm-9">
                     </div>
                     <a href="/seemore.html"></a>
-                    <div class="col-md-2 col-sm-3 col-xs-6 pull-right">
-                        <a href="/seemore.html" class="btn btn-primary-active">See More
+                    <div class="col-md-2 col-sm-3 col-xs-6 pull-right add-top-padding">
+                        <a href="/seemore.html" class="btn btn-primary-active add-top-padding">See More
                         </a>
-
-
                     </div>
 
 
