--- a/seemore.html
+++ b/seemore.html
@@ -206,10 +206,10 @@
         var temp = "<div class='cell' style='width:{width}px; height: {height}px; background-image: url(../Photos/seemorephotos/{index})'></div>";
         var w = 1,
             html = '',
-            limitItem = 30;
-        for (var i = 0; i < limitItem; ++i) {
-            w = 100 + 200 * Math.random() << 0;
-            html += temp.replace(/\{height\}/g, 200).replace(/\{width\}/g, w).replace("{index}", (i % 8)  +".png");
+            limitItem = 19;
+        for (var i = 1; i < limitItem; ++i) {
+            w = 200 + 200 * Math.random() << 0;
+            html += temp.replace(/\{height\}/g, 300).replace(/\{width\}/g, w).replace("{index}", (i )  +".png");
         }
         $("#freewall").html(html);
 
