changed line height on jumbotron title

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <br>
                     <br>
                     <br>
-                    <h1 style="font-family: handWriting; font-size: 700%;">Uglier You</h1>
+                    <h1 style="font-family: handWriting; font-size: 700%; line-height: 1.5"><b>Uglier You</b></h1>
                     <p class="lead" style="font-family: handWriting; font-size: 200%;">Ever wanted to look like THESE people? NOW YOU CAN!
                     </p>
                 </div>
