Fixed the modal for help

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h3 class="modal-title"><i class="fas fa-info-circle"></i> Cart</h3>
+                            <h3 class="modal-title"><i class="fas fa-info-circle"></i> Help</h3>
                         </div>
                         <div class="modal-body">
                             <b>To personalize your own T-shirt:</b> <br>
